# fastapi-rabbitmq-celery-flower

./: CHANGELOG.md  LICENSE.md  README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/creator/: page.tsx
client/app/preview/email/[id]/: page.tsx
client/app/preview/sms/[id]/: page.tsx
client/common/: config.ts
client/components/: filter-section.tsx  footer.tsx  header.tsx  pagination.tsx  search-bar.tsx  template-card.tsx
client/lib/: data.ts
webserver/: .dockerignore  Dockerfile  README.md  pyproject.toml
webserver/webserver/: .env  main.py
webserver/webserver/src/core/: config.py  dbutils.py  funcs.py  rabbitmq.py
webserver/webserver/src/models/: enums.py  models.py  schemas.py
webserver/webserver/src/routers/: notification.py
worker/: .gitignore  Dockerfile  pyproject.toml
worker/worker/: .env  celery_app.py
worker/worker/core/: config.py  enums.py
worker/worker/tasks/: __init__.py  email.py  sms.py
