[project]
name = "webserver"
version = "1.0.0"
description = "Fastapi webserver"
authors = [
    {name = "ysskrishna",email = "sivasaikrishnassk@gmail.com"}
]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = [
    "fastapi",
    "webserver",
    "asgi",
    "api",
    "postgresql",
    "sqlalchemy",
    "async-tasks",
    "celery",
    "rabbitmq",
    "task-queue",
    "message-broker",
    "uvicorn",
    "background-jobs"
]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "uuid6 (>=2024.7.10,<2025.0.0)",
    "pika (>=1.3.2,<2.0.0)"
]

[project.urls]
Homepage = "https://github.com/ysskrishna/fastapi-rabbitmq-celery-flower"
Documentation = "https://github.com/ysskrishna/fastapi-rabbitmq-celery-flower#readme"
Repository = "https://github.com/ysskrishna/fastapi-rabbitmq-celery-flower.git"
"Bug Tracker" = "https://github.com/ysskrishna/fastapi-rabbitmq-celery-flower/issues"


[tool.poetry]
packages = [{include = "webserver"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
